--- a/PTI/Semanas/semana_3/Floofy/floofy_project/login/templates/login/logout.html
+++ b/PTI/Semanas/semana_3/Floofy/floofy_project/login/templates/login/logout.html
@@ -5,6 +5,10 @@
 </title>    
 </head>
 <body>
-<h1>Login de professor</h1>
+<h1>Saiu da sua conta.</h1>
+<br>
+<a href="{% url 'login-home' %}">Login</a>
+<br>
+
 </body>    
 </html>
