--- a/PTI/Semanas/semana_3/Floofy/floofy_project/login/templates/login/logged_student.html
+++ b/PTI/Semanas/semana_3/Floofy/floofy_project/login/templates/login/logged_student.html
@@ -5,6 +5,18 @@
 </title>    
 </head>
 <body>
-<h1>Area de estudante</h1>
+<h1>Area de estudante {{ user.username }} </h1>
+<br>
+<a href="/login-student">Cadeiras</a>
+<br>
+<a href="/login-teacher">Fóruns</a>
+<br>
+<a href="/login-student">Grupos</a>
+<br>
+<a href="/login-teacher">Mensagens</a>
+<br>
+<a href="/login-teacher">Turma</a>
+<br>
+<a href="{% url 'logout' %}">Log out</a>
 </body>    
 </html>
