--- a/PTI/Semanas/semana_4/Floofy/floofy_project/login/templates/login/logged_teacher.html
+++ b/PTI/Semanas/semana_4/Floofy/floofy_project/login/templates/login/logged_teacher.html
@@ -5,7 +5,7 @@
 </title>    
 </head>
 <body>
-<h1>Area de professor {{ user.firstname }} {{ user.surname}}</h1>
+<h1>Area de professor - {{ user.firstname }} {{ user.surname}}</h1>
 <br>
 <a href="/login-student">Cadeiras</a>
 <br>
