melhorado caso de uso definir regras de grupos, apagado detailview

--- a/PTI/Semanas/semana_4/Floofy/floofy_project/groups/templates/groups/groups-rules.html
+++ b/PTI/Semanas/semana_4/Floofy/floofy_project/groups/templates/groups/groups-rules.html
@@ -20,10 +20,10 @@
         <input type='date' name="groups_deadline">
         <br>
         <p>Abrir ou fechar grupos?</p>
-        <input type="radio" id="true" name="groups_on" value="true">
-        <label for="true">Abrir</label><br>
-        <input type="radio" id="false" name="groups_on" value="false">
-        <label for="false">Fechar</label><br>
+        <input type="radio" id="True" name="groups_on" value=True>
+        <label for="True">Abrir</label><br>
+        <input type="radio" id="False" name="groups_on" value=False>
+        <label for="False">Fechar</label><br>
         <input type="submit" value="Submit">
     </form>
 </div>
