--- a/PTI/Semanas/semana_4/Floofy/floofy_project/mygroup/templates/mygroup/mygroup.html
+++ b/PTI/Semanas/semana_4/Floofy/floofy_project/mygroup/templates/mygroup/mygroup.html
@@ -21,6 +21,8 @@
 <br>
 <a href="#">Etapas</a>
 <br>
+<a href="{% url 'leave-group' subject.id %}">Sair deste grupo</a>
+<br>
 <a href="{% url 'select-subject' %}">Back</a>
 </body>    
 </html>
