--- a/PTI/Semanas/semana_4/Floofy/floofy_project/login/templates/login/login_home.html
+++ b/PTI/Semanas/semana_4/Floofy/floofy_project/login/templates/login/login_home.html
@@ -17,6 +17,10 @@
 
       <input type="submit" value="Login">
     </form>
+
+    <br>
+    <br>
+    <a href="{% url 'upload-students' %}">Upload dados de alunos</a>
 </div>
 </body>    
 </html>
