--- a/PTI/Semanas/semana_10/Floofy/floofy_project/templates/mygroup/mygroup.html
+++ b/PTI/Semanas/semana_10/Floofy/floofy_project/templates/mygroup/mygroup.html
@@ -21,6 +21,8 @@
 <br>
 <a href="{% url 'stages' subject.id %}">Etapas</a>
 <br>
+<a href="{% url 'meetings' subject.id %}">Reuniões</a>
+<br>
 <a href="{% url 'leave-group' subject.id %}">Sair deste grupo</a>
 <br>
 <a href="{% url 'select-subject' %}">Back</a>
