--- a/PTI/Semanas/semana_10/Floofy/floofy_project/templates/mygroup/meetings.html
+++ b/PTI/Semanas/semana_10/Floofy/floofy_project/templates/mygroup/meetings.html
@@ -7,12 +7,14 @@
 <body>
 <h1>Area de reuniões - {{ group.name }} de {{ group.subject}} </h1>
 <br>
+{% if meetings %}
 {% for meeting in meetings %}
     <a href="{% url 'this-meeting' meeting.id %}">{{ meeting.name }}</a>
     <br>
 {% endfor %}
+{% endif %}
 
-<a href="{% url 'newmeeting' subject.id %}">Marcar nova runião</a>
+<a href="{% url 'new-meeting' subject.id %}">Marcar nova runião</a>
 
 <a href="{% url 'mygroup' subject.id %}">Back</a>
 </body>    
