caso de uso professor da feedback funciona

--- a/PTI/Semanas/semana_10/Floofy/floofy_project/templates/groups/groups-sub.html
+++ b/PTI/Semanas/semana_10/Floofy/floofy_project/templates/groups/groups-sub.html
@@ -8,7 +8,7 @@
 <h1>Disciplina de {{ subject.name }} </h1>
 <br>
 {% for group in groups %}
-    <p>Grupo {{ group.name }}</p>
+    <a href="{% url 'this-group' group.id %}">Grupo {{ group.name }}</p>
 {% endfor %}
     <br>
     <a href="{% url 'groups-rules' subject.id %}">Regras de grupos</a>
