guardar ficheiro no grupo funciona

--- a/PTI/Semanas/semana_10/Floofy/floofy_project/templates/mygroup/mygroup.html
+++ b/PTI/Semanas/semana_10/Floofy/floofy_project/templates/mygroup/mygroup.html
@@ -13,7 +13,7 @@
 <br>
 <a href="#">Mensagens de grupo</a>
 <br>
-<a href="#">Artefactos</a>
+<a href="{% url 'group-files' group.id %}">Artefactos</a>
 <br>
 <a href="#">Pontuação</a>
 <br>
