--- a/PTI/Semanas/semana_11/Floofy/floofy_project/templates/js.html
+++ b/PTI/Semanas/semana_11/Floofy/floofy_project/templates/js.html
@@ -1,4 +1,14 @@
  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="//code.jquery.com/jquery-3.4.1.min.js"></script>
+ {% load static %}
+ <script src="//code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
 <script src="//stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+
+
+
+<!-- icon js -->
+
+<script defer src="{% static 'js/all.js'%}"></script>
+<script defer src="{% static 'js/brands.js'%}"></script>
+<script defer src="{% static 'js/fontawesome.js'%}"></script>
+<script defer src="{% static 'js/solid.js'%}"></script>
