--- a/PTI/Semanas/semana_11/Floofy/floofy_project/templates/base.html
+++ b/PTI/Semanas/semana_11/Floofy/floofy_project/templates/base.html
@@ -1,24 +1,28 @@
+<!-- {% load static %} -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>PTI04 PROJECT BORN</title>
+    <title>Floofy</title>
     {% include 'css.html' %}
+    
+
 </head>
 <body>
+<!-- <div class="page" id="page"> -->
+<!-- {% include 'include/header.html' %} -->
 
-<div class='container'>
-    <div class='row border-bottom my-3 py-3'>
-        <div class='col'>
-            <h1 class='p-0 m-0'>PTI04</h1>
-        </div>
-    </div>
 {% block content %}
-{% endblock %}
-</div>
 
+
+
+{% endblock %}
+
+
+<!-- </div> -->
+<!-- {% include 'include/footer.html' %} -->
 
 {% include 'js.html' %}
 {% block script %}
