--- a/PTI/Semanas/semana_11/Floofy/floofy_project/templates/css.html
+++ b/PTI/Semanas/semana_11/Floofy/floofy_project/templates/css.html
@@ -2,3 +2,13 @@
 {% load static %}
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
 <link rel="stylesheet" href="{% static "users_chat/chat.css" %}">
+
+<!-- Login CSS -->
+<link rel="stylesheet" href="{% static 'css/login.css'%}" type="text/css">
+
+
+<!-- Mian CSS -->
+<link rel="stylesheet" href="{% static 'css/main.css'%}" type="text/css">
+
+<!-- Icons css -->
+<link rel="stylesheet" href="{% static 'css/all.css'%}" type="text/css">
