--- a/PTI/Semanas/semana_11/Floofy/floofy_project/templates/groups/sel-sub.html
+++ b/PTI/Semanas/semana_11/Floofy/floofy_project/templates/groups/sel-sub.html
@@ -1,17 +1,43 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Selecione a disciplina</h1>
+
+
+<div class="container">
+    <div class="row centered">
+        <div class="col-lg-10 offset-lg-1">
+        <h1 class="text-center" id="area_student_title">Selecione a disciplina </h1>
+        </div>
+    </div>
+</div>
+<div class="container">
+    <div class="row text-left">
+        <div class="col-lg-1">
+            {% if user.is_student %}
+                <a id="link_nav" class="text-center btn btn-block btn-outline-dark" href="{% url 'logged-student' %}"> <i class="fas fa-long-arrow-alt-left"></i>Back</a>
+                {% else %}
+                <a id="link_nav" class="text-center btn btn-block btn-outline-dark" href="{% url 'logged-teacher' %}"> <i class="fas fa-long-arrow-alt-left"></i>Back</a>
+                {% endif %}
+        </div>
+    </div>
+</div>
+
 <br>
-{% for subject in user.subjects.all %}
-<br>
-<a href="{% url 'groups-subject' subject.id %}">{{ subject.name }}</a>
-<br>
-{% endfor %}
-<br>
-{% if user.is_student %}
-<a href="{% url 'logged-student' %}">Back</a>
-{% else %}
-<a href="{% url 'logged-teacher' %}">Back</a>
-{% endif %}
+<div class="container">
+    <div class="row centered"> 
+        <div class=" col-lg-4  offset-lg-4" id="tab_link">
+                {% for subject in user.subjects.all %}
+                <br>
+                <a id="link_nav" class="text-center btn btn-block btn-outline-dark" href="{% url 'groups-subject' subject.id %}">{{ subject.name }}</a>
+                <br>
+                {% endfor %}
+                <br>
+                <!-- {% if user.is_student %}
+                <a id="link_nav" class="text-center btn btn-block text-danger btn-outline-dark" href="{% url 'logged-student' %}">Back</a>
+                {% else %}
+                <a id="link_nav" class="text-center btn btn-block text-danger btn-outline-dark" href="{% url 'logged-teacher' %}">Back</a>
+                {% endif %} -->
+            </div>
+ </div>      
+ </div>     
 {% endblock %}
