--- a/PTI/Semanas/semana_11/Floofy/floofy_project/templates/login/logout.html
+++ b/PTI/Semanas/semana_11/Floofy/floofy_project/templates/login/logout.html
@@ -1,9 +1,25 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Saiu da sua conta.</h1>
+
+<div class="container">
+    <div class="row centered">
+        <div class="col-lg-10 offset-lg-1 text-center">
+            <h1 class="text-center" id="area_student_title">Saiu da sua conta.</h1>
+        </div>
+    </div>
+</div>
+
 <br>
-<a href="{% url 'login-home' %}">Login</a>
+
+<div class="container">
+    <div class="row centered">
+        <div class="col-lg-10 offset-lg-1 text-center">
+            <a class="btn btn-outline-primary" href="{% url 'login-home' %}">Login</a>
+        </div>
+    </div>
+</div>
+
 <br>
 
 {% endblock %}
