--- a/PTI/Semanas/semana_11/Floofy/floofy_project/templates/mygroup/group-files.html
+++ b/PTI/Semanas/semana_11/Floofy/floofy_project/templates/mygroup/group-files.html
@@ -1,25 +1,47 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Area de ficheiros do grupo {{ group.name }} </h1>
-<br>
-{% for member in group.members.all %}
-    <p>{{ member }}</p>    
-    <form method="post" enctype="multipart/form-data">
-        {% csrf_token %}
-        <input type="hidden" name="submission" value={{ member.id|stringformat:"i" }}>
-        <button type="submit">Download</button>
-    </form>
-{% endfor %}
 
-<p>Fazer novo upload? (aviso, irá substituir a sua submissão anterior)</p>
-<form method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    <input type="file" name="myfile">
-    <input type="hidden" name="upload" value={{ user.id|stringformat:"i" }}>
-    <button type="submit">Upload/Update</button>
-</form>
-<br>
+<div class="container">
+    <div class="row centered">
+        <div class="col-lg-10 offset-lg-1">
+        <h1 class="text-center" id="area_student_title">Area de ficheiros do grupo {{ group.name }}</h1>
+        </div>
+    </div>
+</div>
+<div class="container">
+    <div class="row centered text-left">
+        <div class="col-lg-1">
+            <a class="text-center btn btn-block btn-outline-dark" href="{% url 'select-subject' %}">Back</a>
+        </div>
+    </div>
+</div>
 
-<a href="{% url 'mygroup' group.subject.id %}">Back</a>
+<div class="container">
+    <div class="row centered">
+        <div class="col-lg-8 offset-lg-2">
+        
+ 
+            <br>
+            {% for member in group.members.all %}
+                <p>{{ member }}</p>    
+                <form method="post" enctype="multipart/form-data">
+                    {% csrf_token %}
+                    <input type="hidden" name="submission" value={{ member.id|stringformat:"i" }}>
+                    <button type="submit">Download</button>
+                </form>
+            {% endfor %}
+
+            <p>Fazer novo upload? (aviso, irá substituir a sua submissão anterior)</p>
+            <form method="post" enctype="multipart/form-data">
+                {% csrf_token %}
+                <input type="file" name="myfile">
+                <input type="hidden" name="upload" value={{ user.id|stringformat:"i" }}>
+                <button type="submit">Upload/Update</button>
+            </form>
+            <br>
+
+        </div>
+    </div>
+</div>
 {% endblock %}
