--- a/PTI/Semanas/semana_11/Floofy/floofy_project/templates/mygroup/this-task.html
+++ b/PTI/Semanas/semana_11/Floofy/floofy_project/templates/mygroup/this-task.html
@@ -1,55 +1,90 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Detalhes de tarefa - {{ task.name }}</h1>
+<div class="container">
+    <div class="row centered">
+        <div class="col-lg-10 offset-lg-1">
+        <h1 class="text-center" id="area_student_title">Area de estudante : {{ user.firstname }} {{ user.surname}} <br>
+            Detalhes de tarefa - {{ task.name }}
+        </h1>
+        </div>
+    </div>
+</div>
+<div class="container">
+    <div class="row text-left">
+        <div class="col-lg-1">
+             <a class="text-center btn btn-block btn-outline-dark" href="{% url 'tasks' task.group.subject.id %}">Back</a>
+        </div>
+    </div>
+</div>
+
+
 <br>
-<p>Grupo: {{ task.group }}</p>
-<p>Responsável: {{ task.owner.firstname }}</p>
-<p>Nome: {{ task.name }}</p>
-<p>Descrição: {{ task.description }}</p>
-<p>Prazo: {{ task.deadline }}</p>
-<p>Tempo dedicado: {{ task.hours_dedicated }}HH:{{ task.minutes_dedicated }}MM</p>
-<p></p>
-{% if task.owner == None %}
-<div>
-    <p>Editar tarefa</p>
-    <form method="POST" action="{% url 'this-task' task.id %}">
-        {% csrf_token %}
-        <label>Nome</label>
-        <input type='text' name="name">
-        <br>
-        <label>Descrição</label>
-        <input type='text' name="description">
-        <br>
-        <label>Prazo</label>
-        <input type='date' name="deadline">
-        <br>
-        <input type="submit" value="Editar">
-    </form>
+<div class="container">
+    <div class="row centered"> 
+        <div class=" col-lg-4  offset-lg-4" id="drupoo">
+            <ul>
+                <li><p>Grupo: {{ task.group }}</p> </li>
+                <li> <p>Responsável: {{ task.owner.firstname }}</p></li>
+                <li> <p>Nome: {{ task.name }}</p></li>
+                <li>  <p>Descrição: {{ task.description }}</p></li>
+                <li> <p>Prazo: {{ task.deadline }}</p></li>
+                <li><p>Tempo dedicado: {{ task.hours_dedicated }}h:{{ task.minutes_dedicated }}m</p> </li>
+            </ul>
+            <!-- <p>Grupo: {{ task.group }}</p>
+            <p>Responsável: {{ task.owner.firstname }}</p>
+            <p>Nome: {{ task.name }}</p>
+            <p>Descrição: {{ task.description }}</p>
+            <p>Prazo: {{ task.deadline }}</p>
+            <p>Tempo dedicado: {{ task.hours_dedicated }}h:{{ task.minutes_dedicated }}m</p>
+            <p></p> -->
+        </ul>   
+            {% if task.owner == None %}
+            <div class="border-right border-left border-dark text-center">
+                <p>Editar tarefa:</p>
+                <form  class="form-group" method="POST" action="{% url 'this-task' task.id %}">
+                    {% csrf_token %}
+                    <label>Nome</label>
+                    <input  class="form-control" type='text' name="name">
+                    <br>
+                    <label>Descrição</label>
+                    <input  class="form-control" type='text' name="description">
+                    <br>
+                    <label>Prazo</label>
+                    <input  class="form-control" type='date' name="deadline">
+                    <br>
+                    <input class="btn btn-outline-success" type="submit" value="Editar">
+                </form>
+            </div>
+            <div>
+                <p>Quer ser o Responsável por esta tarefa?</p>
+                <div >               
+                    <form method="POST" action="{% url 'this-task' task.id %}">
+                    {% csrf_token %}
+                    <input  type="radio" id="assign" name="assign" value="yes">
+                    <label for="yes"><i class="fas fa-check"></i> Sim</label><br>   
+                    <input class="btn btn-success" type="submit" value="Designar"> 
+                </form>
+            </div>
+
+            </div>
+            {% else %}
+                {% if task.owner == user %}
+                <p>Adicionar contribuição</p>
+                <form method="POST" action="{% url 'this-task' task.id %}">
+                    {% csrf_token %}
+                    <label>Adicionar horas</label>
+                    <input type='text' name="hours_dedicated">
+                    <br>
+                    <label>Adicionar minutos</label>
+                    <input type='text' name="minutes_dedicated">
+                    <br>
+                    <input type="submit" value="Adicionar tempo">
+                </form>
+                {% endif %}
+            {% endif %}
+
+        </div>
+    </div>
 </div>
-<div>
-    <p>Quer ser o Responsável por esta tarefa?</p>
-    <form method="POST" action="{% url 'this-task' task.id %}">
-        {% csrf_token %}
-        <input type="radio" id="assign" name="assign" value="yes">
-        <label for="yes">Sim</label><br>   
-        <input type="submit" value="Designar"> 
-    </form>
-</div>
-{% else %}
-    {% if task.owner == user %}
-    <p>Adicionar contribuição</p>
-    <form method="POST" action="{% url 'this-task' task.id %}">
-        {% csrf_token %}
-        <label>Adicionar horas</label>
-        <input type='text' name="hours_dedicated">
-        <br>
-        <label>Adicionar minutos</label>
-        <input type='text' name="minutes_dedicated">
-        <br>
-        <input type="submit" value="Adicionar tempo">
-    </form>
-    {% endif %}
-{% endif %}
-<a href="{% url 'tasks' task.group.subject.id %}">Back</a>
 {% endblock %}
