dar pontuacao a elemento do grupo

--- a/PTI/Semanas/semana_12/Floofy/floofy_project/templates/mygroup/mygroup.html
+++ b/PTI/Semanas/semana_12/Floofy/floofy_project/templates/mygroup/mygroup.html
@@ -35,7 +35,7 @@
                     <br>
                     <a class="text-center btn btn-block btn-outline-dark"  href="{% url 'group-files' group.id %}">Artefactos</a>
                     <br>
-                    <a class="text-center btn btn-block btn-outline-dark" href="#">Pontuação</a>
+                    <a class="text-center btn btn-block btn-outline-dark" href="{% url 'scores' subject.id %}">Pontuação</a>
                     <br>
                     <a class="text-center btn btn-block btn-outline-dark" href="{% url 'tasks' subject.id %}">Tarefas</a>
                     <br>
