ver horário funciona

--- a/PTI/Semanas/semana_12/Floofy/floofy_project/templates/login/logged_student.html
+++ b/PTI/Semanas/semana_12/Floofy/floofy_project/templates/login/logged_student.html
@@ -26,7 +26,7 @@
                     <br>
                     <a id="link_nav" class="text-center btn btn-block btn-outline-dark" href="/chat">Mensagens</a>
                     <br>
-                    <a id="link_nav" class="text-center btn btn-block btn-outline-dark" href="/login-teacher">Turma</a>
+                    <a id="link_nav" class="text-center btn btn-block btn-outline-dark" href="{% url 'schedule' %}">Horário</a>
                     <br>
                     <a id="link_nav" class="text-center btn btn-block  btn-outline-danger" href="{% url 'logout' %}">Log out</a>
                         
