--- a/PTI/Semanas/semana_12/Floofy/floofy_project/templates/login/logged_student.html
+++ b/PTI/Semanas/semana_12/Floofy/floofy_project/templates/login/logged_student.html
@@ -20,7 +20,7 @@
                     
                     <a  id="link_nav" class="text-center btn btn-block btn-outline-dark" href="/login-student">Cadeiras</a>
                     <br>
-                    <a id="link_nav" class="text-center btn btn-block btn-outline-dark" href="/login-teacher">Fóruns</a>
+                    <a id="link_nav" class="text-center btn btn-block btn-outline-dark" href="{% url 'select-forum-subject' %}">Fóruns</a>
                     <br>
                     <a id="link_nav" class="text-center btn btn-block btn-outline-dark" href="{% url 'select-subject' %}">Grupos</a> 
                     <br>
