--- a/PTI/Semanas/semana_12/Floofy/floofy_project/templates/groups/groups-create.html
+++ b/PTI/Semanas/semana_12/Floofy/floofy_project/templates/groups/groups-create.html
@@ -5,8 +5,8 @@
 <div class="container">
     <div class="row centered">
         <div class="col-lg-10 offset-lg-1 text-center">
-           <h1 class="text-center" id="area_student_title">{{ user.firstname }} {{ user.surname}} </h1><br>
-           <h1>Criar grupo</h1>
+           <!-- <h1 class="text-center" id="area_student_title">{{ user.firstname }} {{ user.surname}} </h1><br> -->
+           <h1 class="text-center" id="area_student_title">>Criar grupo</h1>
         </div>
     </div>
 </div>
