--- a/PTI/Semanas/semana_12/Floofy/floofy_project/templates/groups/stages.html
+++ b/PTI/Semanas/semana_12/Floofy/floofy_project/templates/groups/stages.html
@@ -5,9 +5,9 @@
 <div class="container">
     <div class="row centered">
         <div class="col-lg-10 offset-lg-1">
-        <h1 class="text-center" id="area_student_title"> {{ user.firstname }} {{ user.surname}} <br>
-            Area de etapas de {{subject}} 
-        </h1>
+        <!-- <h1 class="text-center" id="area_student_title"> {{ user.firstname }} {{ user.surname}} <br> -->
+            <h1 class="text-center" id="area_student_title">Area de etapas de {{subject}} </h1>
+        <!-- </h1> -->
         </div>
     </div>
 </div>
