--- a/PTI/Semanas/semana_12/Floofy/floofy_project/templates/mygroup/tasks.html
+++ b/PTI/Semanas/semana_12/Floofy/floofy_project/templates/mygroup/tasks.html
@@ -4,8 +4,8 @@
 <div class="container">
     <div class="row centered">
         <div class="col-lg-10 offset-lg-1">
-        <h1 class="text-center" id="area_student_title">Area de estudante : {{ user.firstname }} {{ user.surname}} <br>
-            Area de tarefas - {{ group.name }} de {{ group.subject}} </h1>
+        <!-- <h1 class="text-center" id="area_student_title">Area de estudante : {{ user.firstname }} {{ user.surname}} <br> -->
+            <h1 class="text-center" id="area_student_title"> Area de tarefas - {{ group.name }} de {{ group.subject}} </h1>
         </div>
     </div>
 </div>
