--- a/PTI/Semanas/semana_12/Floofy/floofy_project/templates/users_chat/myContacts.html
+++ b/PTI/Semanas/semana_12/Floofy/floofy_project/templates/users_chat/myContacts.html
@@ -4,7 +4,8 @@
 <div class="container">
     <div class="row centered">
         <div class="col-lg-10 offset-lg-1 text-center">
-           <h1 class="text-center" id="area_student_title">{{ user.firstname }} {{ user.surname}} </h1><br>
+           <!-- <h1 class="text-center" id="area_student_title">{{ user.firstname }} {{ user.surname}} </h1><br> -->
+           <h1 class="text-center" id="area_student_title">Meus Contactos </h1><br>
         </div>
     </div>
 </div>
