--- a/PTI/Semanas/semana_12/Floofy/floofy_project/templates/forum/forum.html
+++ b/PTI/Semanas/semana_12/Floofy/floofy_project/templates/forum/forum.html
@@ -1,6 +1,14 @@
 {% extends "base.html" %}
 {% block content %}
-<h1>Disciplina: {{ subject.name }} </h1>
+<div class="container">
+    <div class="row centered">
+        <div class="col-lg-10 offset-lg-1">
+        <!-- <h1 class="text-center" id="area_student_title">Area de estudante : {{ user.firstname }} {{ user.surname}} <br> -->
+            <h1 class="text-center" id="area_student_title"> Disciplina: {{ subject.name }}</h1>
+        </div>
+    </div>
+</div>
+
 <div class="container">
     <div class="row text-left">
         <div class="col-lg-1">
@@ -8,16 +16,42 @@
         </div>
     </div>
 </div>
-    {% for post in posts %}
-              <a>Autor: {{ post.author }}</a>
-              <small class="text-muted">Data: {{ post.date_posted|date:"F d, Y" }}</small>
-            <h3><a href="{% url 'post-detail' post.subject.id post.id %}">Título: {{ post.title }}</a></h2>
-            <p>Conteúdo: {{ post.content }}</p>
-    {% endfor %}
-    <div class="row text-left">
-        <div class="col-lg-1">
-            <a id="link_nav" class="text-center btn btn-block btn-outline-dark" href="{% url 'post-create' subject.id %}">Novo post</a>
+<div class="container">
+    <div class="row centered">
+        <div class="col-lg-3 offset-lg-4">
+            <a id="link_nav" class="text-center btn btn-block btn-outline-success" href="{% url 'post-create' subject.id %}">Novo post<i style="margin-left: 7px; color: currentColor; font-size: 15px; " class="fas fa-plus"></i></a>
         </div>
     </div>
+</div>
+<br>
+<div id="forum_container" class="container">
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th scope="col">Título</th>
+                <th scope="col">Autort</th>
+                <th scope="col">Conteúdo</th>
+                <th scope="col">Data</th>
+              </tr>
+        </thead>
+        <tbody>
+
+            {% for post in posts %}
+                    <tr>
+                        <th scope="row"><h4><a href="{% url 'post-detail' post.subject.id post.id %}"> {{ post.title }}</a></h4></th>
+                        <td>{{ post.author }}</td>
+                        <td> {{ post.content }}</td>
+                        <td>{{ post.date_posted|date:"F d, Y" }}</td>
+                    </tr>
+                        <!-- <a>Autor: {{ post.author }}</a> -->
+                        <!-- <small class="text-muted">Data: {{ post.date_posted|date:"F d, Y" }}</small> -->
+                        <!-- <h3><a href="{% url 'post-detail' post.subject.id post.id %}">Título: {{ post.title }}</a></h3> -->
+                        <!-- <p>Conteúdo: {{ post.content }}</p> -->
+            {% endfor %}
+        </tbody>
+    </table>
+</div>
+
+
 
 {% endblock content %}
