--- a/PTI/Semanas/semana_12/Floofy/floofy_project/templates/forum/post_detail.html
+++ b/PTI/Semanas/semana_12/Floofy/floofy_project/templates/forum/post_detail.html
@@ -1,28 +1,45 @@
   
 {% extends "base.html" %}
 {% block content %}
-<h1>Disciplina: {{ subject.name }}</h1>
-  <article class="media content-section">
-  <div class="media-body">
-      <div class="article-metadata">
-        <a class="mr-2" href="#">{{ object.author }}</a>
-        <small class="text-muted">{{ object.date_posted|date:"F d, Y" }}</small>
-        {% if object.author == user %}
-          <div>
-            <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url 'post-update' object.subject.id object.id %}">Update</a>
-            <a class="btn btn-danger btn-sm mt-1 mb-1" href="{% url 'post-delete' object.subject.id object.id %}">Delete</a>
-          </div>
-        {% endif %}
+
+<div class="container">
+  <div class="row centered">
+      <div class="col-lg-10 offset-lg-1">
+      <!-- <h1 class="text-center" id="area_student_title">Area de estudante : {{ user.firstname }} {{ user.surname}} <br> -->
+          <h1 class="text-center" id="area_student_title"> Disciplina: {{ subject.name }}</h1>
       </div>
-      <h2 class="article-title">{{ object.title }}</h2>
-      <p class="article-content">{{ object.content }}</p>
-    </div>
-  </article>
-  <div class="container">
-    <div class="row text-left">
-        <div class="col-lg-1">
-            <a id="link_nav" class="text-center btn btn-block btn-outline-dark" href="{% url 'forum' subject.id %}">Back</a>
-        </div>
-    </div>
+  </div>
 </div>
+<div class="container">
+  <div class="row text-left">
+      <div class="col-lg-1">
+          <a id="link_nav" class="text-center btn btn-block btn-outline-dark" href="{% url 'forum' subject.id %}">Back</a>
+      </div>
+  </div>
+</div>
+<div class="container">
+  <div class="row text-center">
+    <div class="col-lg-6 offset-lg-3">
+      <article class="media content-section">
+        <div class="media-body">
+            <div class="article-metadata">
+              <h4><a class="mr-6" href="#"> {{ object.author }}</a></h4>
+              <small class="text-muted">{{ object.date_posted|date:"F d, Y" }}</small>
+            </div>
+            <h2 class="article-title">{{ object.title }}</h2>
+            <p class="article-content">{{ object.content }}</p>
+            {% if object.author == user %}
+            <div>
+              <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url 'post-update' object.subject.id object.id %}">Update</a>
+              <a class="btn btn-danger btn-sm mt-1 mb-1" href="{% url 'post-delete' object.subject.id object.id %}">Delete</a>
+            </div>
+          {% endif %}
+          </div>
+        </article>
+    </div>
+  </div>
+</div>
+  
+
+
 {% endblock content %}
