--- a/PTI/Semanas/semana_12/Floofy/floofy_project/templates/forum/post_form.html
+++ b/PTI/Semanas/semana_12/Floofy/floofy_project/templates/forum/post_form.html
@@ -1,24 +1,40 @@
   
 {% extends "base.html" %}
 {% block content %}
-    <h1>Disciplina: {{ subject }}</h1>
-    <div class="content-section">
-        <form method="POST">
-            {% csrf_token %}
-            <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Blog Post</legend>
-                {{ form }}
-            </fieldset>
-            <div class="form-group">
-                <button class="btn btn-outline-info" type="submit">Post</button>
-            </div>
-        </form>
-    </div>
-    <div class="container">
-        <div class="row text-left">
-            <div class="col-lg-1">
-                <a id="link_nav" class="text-center btn btn-block btn-outline-dark" href="{% url 'forum' subject.id %}">Back</a>
-            </div>
+<div class="container">
+    <div class="row centered">
+        <div class="col-lg-10 offset-lg-1">
+        <!-- <h1 class="text-center" id="area_student_title">Area de estudante : {{ user.firstname }} {{ user.surname}} <br> -->
+            <h1 class="text-center" id="area_student_title"> Disciplina: {{ subject.name }}</h1>
         </div>
     </div>
+</div>
+<div class="container">
+    <div class="row text-left">
+        <div class="col-lg-1">
+            <a id="link_nav" class="text-center btn btn-block btn-outline-dark" href="{% url 'forum' subject.id %}">Back</a>
+        </div>
+    </div>
+</div>
+   
+<div class="container">
+    <div class="row">
+        <div class="col-lg-6 offset-lg-3 text-center">
+            <div class="content-section">
+                <form method="POST">
+                    {% csrf_token %}
+                    <fieldset class="form-group">
+                        <legend class="border-bottom mb-4">Preenche publicação</legend>
+                        {{ form }}
+                    </fieldset>
+                    <div class="form-group text-center">
+                        <button class="btn btn-outline-primary" type="submit">Publicar!</button>
+                    </div>
+                </form>
+            </div>
+        
+        </div>
+    </div>
+</div>
+    
 {% endblock content %}
