--- a/PTI/Semanas/semana_12/Floofy/floofy_project/templates/include/header.html
+++ b/PTI/Semanas/semana_12/Floofy/floofy_project/templates/include/header.html
@@ -1,6 +1,6 @@
 <header>
   <div class="container">
-    <nav class="navbar navbar-expand-lg navbar-light ">
+    <nav class="navbar navbar-expand-lg header_nav ">
       {% if user.is_student %}
       <a  class="navbar-brand" href="{% url 'logged-student' %}">Floofy</a>
       {% else %}
@@ -11,35 +11,42 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
+ 
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            {% if user.is_student %}
-            <a id="link_nav" class="text-center btn btn-block btn-outline-dark" href="{% url 'logged-student' %}">Home</a>
-            {% else %}
-            <a id="link_nav" class="text-center btn btn-block btn-outline-dark" href="{% url 'logged-teacher' %}">Home</a>
-            {% endif %}
-          </li>
-
+            <a id="header_icon_user" class="nav-link text-dark" href="#">{{ user.firstname }} {{ user.surname}}</a>
+        </li>
+          <li class="nav-item">
             {% if user.is_active %}
-            <li class="nav-item">
-              <a class="nav-link disabled" href="#">Cadeiras</a>
+              {% if user.is_student %}
+              <a id="link_home_header" class="text-center btn" href="{% url 'logged-student' %}"><svg class="bi bi-house" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" d="M2 13.5V7h1v6.5a.5.5 0 0 0 .5.5h9a.5.5 0 0 0 .5-.5V7h1v6.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5zm11-11V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z"/>
+                <path fill-rule="evenodd" d="M7.293 1.5a1 1 0 0 1 1.414 0l6.647 6.646a.5.5 0 0 1-.708.708L8 2.207 1.354 8.854a.5.5 0 1 1-.708-.708L7.293 1.5z"/>
+              </svg></a>
+              {% else %}
+              <a id="link_home_header" class="text-center btn btn-block " href="{% url 'logged-teacher' %}"><svg class="bi bi-house" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" d="M2 13.5V7h1v6.5a.5.5 0 0 0 .5.5h9a.5.5 0 0 0 .5-.5V7h1v6.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5zm11-11V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z"/>
+                <path fill-rule="evenodd" d="M7.293 1.5a1 1 0 0 1 1.414 0l6.647 6.646a.5.5 0 0 1-.708.708L8 2.207 1.354 8.854a.5.5 0 1 1-.708-.708L7.293 1.5z"/>
+              </svg></a>
+              {% endif %}
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/chat">Mensagens</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link text-danger" href="{% url 'logout' %}">Log out</a>
-            </li>
+
+              
+              <li class="nav-item">
+                <a class="nav-link disabled" href="#">Cadeiras</a> <div id="header_separete"></div>
+              </li>
+              <li class="nav-item">
+                  <a id="header_icon_chat" class="nav-link" href="/chat"><svg class="bi bi-chat-dots" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" d="M2.678 11.894a1 1 0 0 1 .287.801 10.97 10.97 0 0 1-.398 2c1.395-.323 2.247-.697 2.634-.893a1 1 0 0 1 .71-.074A8.06 8.06 0 0 0 8 14c3.996 0 7-2.807 7-6 0-3.192-3.004-6-7-6S1 4.808 1 8c0 1.468.617 2.83 1.678 3.894zm-.493 3.905a21.682 21.682 0 0 1-.713.129c-.2.032-.352-.176-.273-.362a9.68 9.68 0 0 0 .244-.637l.003-.01c.248-.72.45-1.548.524-2.319C.743 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.52.263-1.639.742-3.468 1.105z"/>
+                    <path d="M5 8a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/>
+                  </svg></a>
+              </li>
+
+              <li class="nav-item">
+                  <a id="header_icon_exit" class="nav-link text-danger" href="{% url 'logout' %}">Log out<i style=" margin-left: 10px; " class="fas fa-sign-out-alt"></i></a>
+              </li>
             {% else %}
-            <li class="nav-item">
-              <a class="nav-link disabled" href="#">Cadeiras</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link disabled " tabindex="-1" aria-disabled="true" href="#">Mensagens</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link  disabled" href="#">Log out</a>
-            </li>
+
             {% endif %}
       
           <!-- <li class="nav-item dropdown">
