--- a/PTI/Semanas/semana_12/Floofy/floofy_project/templates/login/logged_teacher.html
+++ b/PTI/Semanas/semana_12/Floofy/floofy_project/templates/login/logged_teacher.html
@@ -6,7 +6,8 @@
 <div class="container">
     <div class="row centered">
         <div class="col-lg-10 offset-lg-1">
-           <h1 class="text-center" id="area_student_title">Area de professor - {{ user.firstname }} {{ user.surname}}</h1>
+           <h1 class="text-center" id="area_student_title">Area de professor</h1>
+           <!-- <h1 class="text-center" id="area_student_title">Area de professor - {{ user.firstname }} {{ user.surname}}</h1> -->
         </div>
     </div>
 </div>
