--- a/PTI/Semanas/semana_12/Floofy/floofy_project/templates/mygroup/meetings.html
+++ b/PTI/Semanas/semana_12/Floofy/floofy_project/templates/mygroup/meetings.html
@@ -4,8 +4,8 @@
 <div class="container">
     <div class="row centered">
         <div class="col-lg-10 offset-lg-1 text-center">
-           <h1 class="text-center" id="area_student_title">{{ user.firstname }} {{ user.surname}} </h1><br>
-           <h3 class="text-center">Area de reuniões - {{ group.name }} de {{ group.subject}}</h3>
+           <!-- <h1 class="text-center" id="area_student_title">{{ user.firstname }} {{ user.surname}} </h1><br> -->
+           <h1 class="text-center">Area de reuniões - {{ group.name }} de {{ group.subject}}</h1>
         </div>
     </div>
 </div>
