--- a/PTI/Semanas/semana_12/Floofy/floofy_project/templates/mygroup/this-task.html
+++ b/PTI/Semanas/semana_12/Floofy/floofy_project/templates/mygroup/this-task.html
@@ -4,9 +4,8 @@
 <div class="container">
     <div class="row centered">
         <div class="col-lg-10 offset-lg-1">
-        <h1 class="text-center" id="area_student_title">Area de estudante : {{ user.firstname }} {{ user.surname}} <br>
-            Detalhes de tarefa - {{ task.name }}
-        </h1>
+        <!-- <h1 class="text-center" id="area_student_title">Area de estudante : {{ user.firstname }} {{ user.surname}} <br> -->
+            <h1 class="text-center" id="area_student_title"> Detalhes de tarefa - {{ task.name }}</h1>
         </div>
     </div>
 </div>
